--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit>=1.31.0
 rembg>=2.0.56
 Pillow>=10.2.0
-opencv-python>=4.9.0.80
+opencv-python-headless>=4.9.0.80
 numpy>=1.26.3
 scikit-image>=0.22.0
 torch>=2.0.0
